
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ strcmp (char*,char*) ;
 int strlen (char*) ;
 scalar_t__ strncmp (char*,char*,int) ;

char *
getdir (char *stat)
{
        char *dir = stat;

        if (strlen (dir) < 57)
                return (((void*)0));

        if (strncmp (" ", dir, 1) == 0)
                ++dir;
        if (strncmp ("d", dir, 1) != 0)
                return (((void*)0));

        dir += 55;
        dir[strlen (dir) - 2] = 0;


        if (strcmp (".", dir) == 0 || strcmp ("..", dir) == 0)
                return (((void*)0));

        return (dir);
}
